# commspt-scripts

./: .gitignore  LICENSE  acs_email_statistics.py  main.py  pyproject.toml  registration_statistics.py
utils/: config_manager.py  httpx_requests.py  send_message.py
